[dependencies]
log = { workspace = true }
notify = { version = "6" , features = ["serde"] }
notify-debouncer-mini = { version = "0.4" , features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Watch files and directories for changes."
edition = { workspace = true }
license-file = { workspace = true }
name = "tauri-plugin-fs-watch"
rust-version = { workspace = true }
version = "0.0.0"
